[gd_scene load_steps=43 format=2]

[ext_resource path="res://Assets/Adventure_Character_Simple.png" type="Texture" id=1]
[ext_resource path="res://Player/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Player/Idle.gd" type="Script" id=3]
[ext_resource path="res://Player/Moving_and_Jumping.gd" type="Script" id=4]
[ext_resource path="res://Player/Falling.gd" type="Script" id=5]
[ext_resource path="res://Player/Jumping.gd" type="Script" id=6]
[ext_resource path="res://Player/Moving.gd" type="Script" id=7]
[ext_resource path="res://Player/Player.gd" type="Script" id=8]
[ext_resource path="res://Player/Coyote.gd" type="Script" id=9]
[ext_resource path="res://Player/Attack.gd" type="Script" id=10]
[ext_resource path="res://Player/Hud.tscn" type="PackedScene" id=11]
[ext_resource path="res://Menus/PauseMenu.tscn" type="PackedScene" id=12]

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 672, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 96, 48, 48 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "Fall_Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Falling",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "Jump_Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Moving",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 8.2815, 11.21 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 18 )
animation = "Jump_Attack"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.7185, -1.79 )
shape = SubResource( 19 )

[node name="Attack_Area" type="Area2D" parent="."]

[node name="Attack_Bubble" type="CollisionPolygon2D" parent="Attack_Area"]
polygon = PoolVector2Array( -7, -13, 2, -27, 13, -33, 25, -33, 33, -24, 35, -16, 36, -5, 31, 5, 19, 11, 9, 12, -4, 7 )
disabled = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Moving_and_Jumping" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="StateMachine/Falling"]
wait_time = 0.7
one_shot = true

[node name="Coyote" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="StateMachine/Coyote"]
wait_time = 0.2
one_shot = true

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="StateMachine/Attack"]
wait_time = 0.7
one_shot = true

[node name="Score" parent="." instance=ExtResource( 11 )]
anchor_right = 0.0
margin_left = -28.0
margin_top = -26.0
margin_right = -28.0
margin_bottom = -26.0

[node name="Pause" parent="." instance=ExtResource( 12 )]
pause_mode = 2
visible = false
margin_left = 4.0
margin_top = 21.0
margin_right = 4.0
margin_bottom = 21.0

[connection signal="body_entered" from="Attack_Area" to="." method="_on_Attack_Area_body_entered"]
[connection signal="timeout" from="StateMachine/Falling/Timer" to="StateMachine/Falling" method="_on_Timer_timeout"]
[connection signal="timeout" from="StateMachine/Coyote/Timer" to="StateMachine/Coyote" method="_on_Timer_timeout"]
[connection signal="timeout" from="StateMachine/Attack/Timer" to="StateMachine/Attack" method="_on_Timer_timeout"]
